[workspace]

[package]
name = "commonware-avs-node"
version = "0.1.0"
edition = "2024"

[dependencies]

alloy = { version = "0.12.6" }
alloy-network = "0.5.4"
alloy-primitives = "0.8.25"
alloy-signer = "0.12.6"
alloy-signer-local = "0.12.6"
alloy-provider = "0.12.6"
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
bn254 = { git = "https://github.com/BreadchainCoop/bn254.git", version = "0.1.3" }
bytes = "1.10.1"
clap = "4.5.37"
commonware-codec = "0.0.50"
commonware-cryptography = "0.0.50"
commonware-macros = "0.0.50"
commonware-p2p = "0.0.50"
commonware-runtime = "0.0.50"
commonware-utils = "0.0.50"
dotenv = "0.15.0"
eigen-crypto-bls = "0.5.0"
eigen-crypto-bn254 = "0.5.0"
eigen-logging = "0.1.3"
futures = "0.3.31"
futures-util = "0.3.31"
governor = "0.6.3"
prometheus-client = "0.23.1"
prost = "0.13.5"
rand = "0.9.1"
commonware-eigenlayer = {git = "https://github.com/BreadchainCoop/commonware-avs-network-lookup"}
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = { version = "2.5.4", features = ["serde"] }
serde_json = "1.0.140"

[build-dependencies]
prost-build = "0.13.5"

[patch.crates-io]
deranged = { git = "https://github.com/jhpratt/deranged", rev = "3c95431a375bca409a4731ae8749acc84e076267" }

# Clippy configuration for enhanced linting
[lints.clippy]
# Pedantic lints for better code quality
pedantic = "warn"
nursery = "warn"

# Specific lints to enforce
missing_docs_in_private_items = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
undocumented_unsafe_blocks = "deny"
unnecessary_safety_doc = "warn"

# Performance lints
large_stack_arrays = "warn"
large_futures = "warn"
large_enum_variant = "warn"

# Style lints
enum_glob_use = "warn"
wildcard_imports = "warn"
module_name_repetitions = "allow"  # Common in bindings
similar_names = "allow"  # Common in crypto code

# Complexity lints
cognitive_complexity = "warn"
too_many_lines = "warn"
type_complexity = "warn"

# Correctness lints
panic = "deny"
unwrap_used = "deny"
expect_used = "warn"
indexing_slicing = "warn"
integer_arithmetic = "warn"